Fix a few of the unit tests

--- a/js/data/locale/wordbreak.json
+++ b/js/data/locale/wordbreak.json
@@ -14,6 +14,10 @@
             "t": "CR"
         },
         {
+            "s": 32,
+            "t": "WSegSpace"
+        },
+        {
             "s": 34,
             "t": "Double_Quote"
         },
@@ -185,8 +189,17 @@
             "t": "ALetter"
         },
         {
-            "s": 1377,
-            "e": 1415,
+            "s": 1371,
+            "e": 1372,
+            "t": "ALetter"
+        },
+        {
+            "s": 1374,
+            "t": "ALetter"
+        },
+        {
+            "s": 1376,
+            "e": 1416,
             "t": "ALetter"
         },
         {
@@ -222,7 +235,7 @@
             "t": "Hebrew_Letter"
         },
         {
-            "s": 1520,
+            "s": 1519,
             "e": 1522,
             "t": "Hebrew_Letter"
         },
@@ -407,6 +420,10 @@
             "t": "ALetter"
         },
         {
+            "s": 2045,
+            "t": "Extend"
+        },
+        {
             "s": 2048,
             "e": 2069,
             "t": "ALetter"
@@ -469,7 +486,7 @@
             "t": "ALetter"
         },
         {
-            "s": 2260,
+            "s": 2259,
             "e": 2273,
             "t": "Extend"
         },
@@ -623,6 +640,10 @@
         {
             "s": 2556,
             "t": "ALetter"
+        },
+        {
+            "s": 2558,
+            "t": "Extend"
         },
         {
             "s": 2561,
@@ -970,7 +991,7 @@
         },
         {
             "s": 3072,
-            "e": 3075,
+            "e": 3076,
             "t": "Extend"
         },
         {
@@ -1551,6 +1572,10 @@
             "t": "ALetter"
         },
         {
+            "s": 5760,
+            "t": "WSegSpace"
+        },
+        {
             "s": 5761,
             "e": 5786,
             "t": "ALetter"
@@ -1645,7 +1670,7 @@
         },
         {
             "s": 6176,
-            "e": 6263,
+            "e": 6264,
             "t": "ALetter"
         },
         {
@@ -1841,6 +1866,16 @@
             "t": "ALetter"
         },
         {
+            "s": 7312,
+            "e": 7354,
+            "t": "ALetter"
+        },
+        {
+            "s": 7357,
+            "e": 7359,
+            "t": "ALetter"
+        },
+        {
             "s": 7376,
             "e": 7378,
             "t": "Extend"
@@ -1986,6 +2021,16 @@
             "t": "ALetter"
         },
         {
+            "s": 8192,
+            "e": 8198,
+            "t": "WSegSpace"
+        },
+        {
+            "s": 8200,
+            "e": 8202,
+            "t": "WSegSpace"
+        },
+        {
             "s": 8204,
             "t": "Extend"
         },
@@ -2037,6 +2082,10 @@
         {
             "s": 8276,
             "t": "ExtendNumLet"
+        },
+        {
+            "s": 8287,
+            "t": "WSegSpace"
         },
         {
             "s": 8288,
@@ -2133,40 +2182,6 @@
             "s": 9398,
             "e": 9449,
             "t": "ALetter"
-        },
-        {
-            "s": 9757,
-            "t": "E_Base"
-        },
-        {
-            "s": 9792,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 9794,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 9877,
-            "e": 9878,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 9977,
-            "t": "E_Base"
-        },
-        {
-            "s": 9992,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 9994,
-            "e": 9997,
-            "t": "E_Base"
-        },
-        {
-            "s": 10084,
-            "t": "Glue_After_Zwj"
         },
         {
             "s": 11264,
@@ -2279,6 +2294,10 @@
             "t": "ALetter"
         },
         {
+            "s": 12288,
+            "t": "WSegSpace"
+        },
+        {
             "s": 12293,
             "t": "ALetter"
         },
@@ -2319,7 +2338,7 @@
         },
         {
             "s": 12549,
-            "e": 12590,
+            "e": 12591,
             "t": "ALetter"
         },
         {
@@ -2414,12 +2433,7 @@
         },
         {
             "s": 42775,
-            "e": 42926,
-            "t": "ALetter"
-        },
-        {
-            "s": 42928,
-            "e": 42935,
+            "e": 42937,
             "t": "ALetter"
         },
         {
@@ -2500,7 +2514,12 @@
         },
         {
             "s": 43261,
+            "e": 43262,
             "t": "ALetter"
+        },
+        {
+            "s": 43263,
+            "t": "Extend"
         },
         {
             "s": 43264,
@@ -3167,7 +3186,7 @@
         },
         {
             "s": 68121,
-            "e": 68147,
+            "e": 68149,
             "t": "ALetter"
         },
         {
@@ -3240,6 +3259,40 @@
             "t": "ALetter"
         },
         {
+            "s": 68864,
+            "e": 68899,
+            "t": "ALetter"
+        },
+        {
+            "s": 68900,
+            "e": 68903,
+            "t": "Extend"
+        },
+        {
+            "s": 68912,
+            "e": 68921,
+            "t": "Numeric"
+        },
+        {
+            "s": 69376,
+            "e": 69404,
+            "t": "ALetter"
+        },
+        {
+            "s": 69415,
+            "t": "ALetter"
+        },
+        {
+            "s": 69424,
+            "e": 69445,
+            "t": "ALetter"
+        },
+        {
+            "s": 69446,
+            "e": 69456,
+            "t": "Extend"
+        },
+        {
             "s": 69632,
             "e": 69634,
             "t": "Extend"
@@ -3279,6 +3332,10 @@
             "t": "Format"
         },
         {
+            "s": 69837,
+            "t": "Format"
+        },
+        {
             "s": 69840,
             "e": 69864,
             "t": "ALetter"
@@ -3307,6 +3364,15 @@
             "s": 69942,
             "e": 69951,
             "t": "Numeric"
+        },
+        {
+            "s": 69956,
+            "t": "ALetter"
+        },
+        {
+            "s": 69957,
+            "e": 69958,
+            "t": "Extend"
         },
         {
             "s": 69968,
@@ -3342,7 +3408,7 @@
             "t": "ALetter"
         },
         {
-            "s": 70090,
+            "s": 70089,
             "e": 70092,
             "t": "Extend"
         },
@@ -3453,7 +3519,8 @@
             "t": "ALetter"
         },
         {
-            "s": 70460,
+            "s": 70459,
+            "e": 70460,
             "t": "Extend"
         },
         {
@@ -3522,6 +3589,10 @@
             "s": 70736,
             "e": 70745,
             "t": "Numeric"
+        },
+        {
+            "s": 70750,
+            "t": "Extend"
         },
         {
             "s": 70784,
@@ -3617,6 +3688,16 @@
             "t": "Numeric"
         },
         {
+            "s": 71680,
+            "e": 71723,
+            "t": "ALetter"
+        },
+        {
+            "s": 71724,
+            "e": 71738,
+            "t": "Extend"
+        },
+        {
             "s": 71840,
             "e": 71903,
             "t": "ALetter"
@@ -3685,6 +3766,10 @@
             "s": 72330,
             "e": 72345,
             "t": "Extend"
+        },
+        {
+            "s": 72349,
+            "t": "ALetter"
         },
         {
             "s": 72384,
@@ -3783,6 +3868,55 @@
             "t": "Numeric"
         },
         {
+            "s": 73056,
+            "e": 73061,
+            "t": "ALetter"
+        },
+        {
+            "s": 73063,
+            "e": 73064,
+            "t": "ALetter"
+        },
+        {
+            "s": 73066,
+            "e": 73097,
+            "t": "ALetter"
+        },
+        {
+            "s": 73098,
+            "e": 73102,
+            "t": "Extend"
+        },
+        {
+            "s": 73104,
+            "e": 73105,
+            "t": "Extend"
+        },
+        {
+            "s": 73107,
+            "e": 73111,
+            "t": "Extend"
+        },
+        {
+            "s": 73112,
+            "t": "ALetter"
+        },
+        {
+            "s": 73120,
+            "e": 73129,
+            "t": "Numeric"
+        },
+        {
+            "s": 73440,
+            "e": 73458,
+            "t": "ALetter"
+        },
+        {
+            "s": 73459,
+            "e": 73462,
+            "t": "Extend"
+        },
+        {
             "s": 73728,
             "e": 74649,
             "t": "ALetter"
@@ -3860,6 +3994,11 @@
         {
             "s": 93053,
             "e": 93071,
+            "t": "ALetter"
+        },
+        {
+            "s": 93760,
+            "e": 93823,
             "t": "ALetter"
         },
         {
@@ -4360,204 +4499,9 @@
             "t": "Regional_Indicator"
         },
         {
-            "s": 127752,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127806,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127859,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127877,
-            "t": "E_Base"
-        },
-        {
-            "s": 127891,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127908,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127912,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127938,
-            "e": 127940,
-            "t": "E_Base"
-        },
-        {
-            "s": 127943,
-            "t": "E_Base"
-        },
-        {
-            "s": 127946,
-            "e": 127948,
-            "t": "E_Base"
-        },
-        {
-            "s": 127979,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 127981,
-            "t": "Glue_After_Zwj"
-        },
-        {
             "s": 127995,
             "e": 127999,
-            "t": "E_Modifier"
-        },
-        {
-            "s": 128066,
-            "e": 128067,
-            "t": "E_Base"
-        },
-        {
-            "s": 128070,
-            "e": 128080,
-            "t": "E_Base"
-        },
-        {
-            "s": 128102,
-            "e": 128105,
-            "t": "E_Base_GAZ"
-        },
-        {
-            "s": 128110,
-            "t": "E_Base"
-        },
-        {
-            "s": 128112,
-            "e": 128120,
-            "t": "E_Base"
-        },
-        {
-            "s": 128124,
-            "t": "E_Base"
-        },
-        {
-            "s": 128129,
-            "e": 128131,
-            "t": "E_Base"
-        },
-        {
-            "s": 128133,
-            "e": 128135,
-            "t": "E_Base"
-        },
-        {
-            "s": 128139,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128170,
-            "t": "E_Base"
-        },
-        {
-            "s": 128187,
-            "e": 128188,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128295,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128300,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128372,
-            "e": 128373,
-            "t": "E_Base"
-        },
-        {
-            "s": 128378,
-            "t": "E_Base"
-        },
-        {
-            "s": 128400,
-            "t": "E_Base"
-        },
-        {
-            "s": 128405,
-            "e": 128406,
-            "t": "E_Base"
-        },
-        {
-            "s": 128488,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128581,
-            "e": 128583,
-            "t": "E_Base"
-        },
-        {
-            "s": 128587,
-            "e": 128591,
-            "t": "E_Base"
-        },
-        {
-            "s": 128640,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128658,
-            "t": "Glue_After_Zwj"
-        },
-        {
-            "s": 128675,
-            "t": "E_Base"
-        },
-        {
-            "s": 128692,
-            "e": 128694,
-            "t": "E_Base"
-        },
-        {
-            "s": 128704,
-            "t": "E_Base"
-        },
-        {
-            "s": 128716,
-            "t": "E_Base"
-        },
-        {
-            "s": 129304,
-            "e": 129308,
-            "t": "E_Base"
-        },
-        {
-            "s": 129310,
-            "e": 129311,
-            "t": "E_Base"
-        },
-        {
-            "s": 129318,
-            "t": "E_Base"
-        },
-        {
-            "s": 129328,
-            "e": 129337,
-            "t": "E_Base"
-        },
-        {
-            "s": 129341,
-            "e": 129342,
-            "t": "E_Base"
-        },
-        {
-            "s": 129489,
-            "e": 129501,
-            "t": "E_Base"
+            "t": "Extend"
         },
         {
             "s": 917505,
@@ -4595,7 +4539,8 @@
         },
         "ZWJ": {
             "Glue_After_Zwj": 1,
-            "EBG": 1
+            "EBG": 1,
+            "WSegSpace": 1
         },
         "Katakana": {
             "Katakana": 1,
@@ -4673,10 +4618,14 @@
             "EBG": 1,
             "Format_FE": 1,
             "Extend_FE": 1,
-            "ZWJ_FE": 1
+            "ZWJ_FE": 1,
+            "WSegSpace": 1
         },
         "Newline": {
             "Any": 0
+        },
+        "WSegSpace": {
+            "WSegSpace": 1
         }
     }
 }
