--- a/js/data/locale/und/CN/address.json
+++ b/js/data/locale/und/CN/address.json
@@ -2,12 +2,12 @@
 	"multiformat": true,
 	"formats": {
 		"default": {
-			"latin": "{streetAddress}\n{locality}, {region} {postalCode}\n{country}",
-			"asian": "{country}{postalCode}\n{region}{locality}{streetAddress}"
+			"latin": "{streetAddress}, {locality}\n{postalCode} {region}\n{country}",
+			"asian": "{country}\n{region}\n{locality}{postalCode}\n{streetAddress}"
 		},
 		"asian": {
-			"asian": "{postalCode}\n{region}{locality}{streetAddress}",
-			"latin": "{streetAddress}\n{locality} {region} {postalCode}"
+			"asian": "{region}\n{locality}{postalCode}\n{streetAddress}",
+			"latin": "{streetAddress}, {locality}\n{postalCode} {region}"
 		}
 	},
 	"startAt": {
