Many unit tests fixed... many not. More work needed.

--- a/js/data/locale/address.json
+++ b/js/data/locale/address.json
@@ -1,1 +1,10 @@
-{}
+{
+    "fieldNames": {
+        "streetAddress": "Street Address",
+        "locality": "City",
+        "region": "Province",
+        "postalCode": "Postal Code",
+        "country": "Country",
+        "postOffice": "Post Office"
+    }
+}
