--- a/js/data/locale/und/AE/address.json
+++ b/js/data/locale/und/AE/address.json
@@ -18,5 +18,8 @@
 			"pattern": "[A-zـاـبــتــثــجــحــخــدـذـرـزـســشــصــضــطــظــعـغفقكـلــمــنــهـويـاـبـتـثـجـحـخـدـذـرـزـسـشـصـضـطـظـعغـفـقـكــلـمـنـهويـابـتـثـجـحـخـدذرزسـشـصـضـطـظـعـلـمـنـهـابتثجحخدذرزسشصضطظعلمنه\\.\\']+"
 		}
 		
-	]
+	],
+    "fieldNames": {
+        "region": "Emirate"
+    }
 }
