--- a/js/data/locale/und/BJ/address.json
+++ b/js/data/locale/und/BJ/address.json
@@ -17,5 +17,8 @@
 			"pattern": "([A-Za-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-']+( [A-Za-z0-9ÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-']+)?)$"
 		}
 		
-	]
+	],
+    "fieldNames": {
+        "region": "Department"
+    }
 }
