--- a/js/data/locale/und/BO/address.json
+++ b/js/data/locale/und/BO/address.json
@@ -12,5 +12,8 @@
 			"pattern": "[A-Za-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-' ]+",
 			"matchGroup": 0
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "Department"
+    }
 }
