--- a/js/data/locale/und/CF/address.json
+++ b/js/data/locale/und/CF/address.json
@@ -11,5 +11,8 @@
 			"line": "last",
 			"pattern": "[A-Za-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-' ]+"
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "Prefecture"
+    }
 }
