--- a/js/data/locale/und/DJ/address.json
+++ b/js/data/locale/und/DJ/address.json
@@ -12,5 +12,8 @@
 			"pattern": "([A-zجثتبأرذدخحضصشسزفغعظطنملكقيوهـدُدِدَدٌدٍدًÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû]+)$",
 			"matchGroup": 0
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "Region"
+    }
 }
