--- a/js/data/locale/und/AL/address.json
+++ b/js/data/locale/und/AL/address.json
@@ -5,16 +5,18 @@
     },
     "startAt": "end",
     "fields": [
-	{
+        {
             "name": "locality",
             "line": "startAtLast",
             "pattern": "[AaBbTstsChchDdDhdhÉéEeFfGgGhghHhIiJjKkLlLlllMmNnGngnOoPpCcRrRrrrSsShshTtThthUuVvZzZhzhYyXxXhxh\\.\\-\\s']+"
         },
-	{
+        {
             "name": "postalCode",
             "line": "last",
             "pattern": "[0-9]{4}"
         }
-	 
-    ]
+    ],
+    "fieldNames": {
+        "region": "County"
+    }
 }
