--- a/js/data/locale/und/BF/address.json
+++ b/js/data/locale/und/BF/address.json
@@ -11,5 +11,8 @@
 			"pattern": "[A-Za-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-']+(\\s+[A-Za-z0-9ÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-']+)?(\\s+[0-9]{2})?$",
 			"matchGroup": 0
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "Region"
+    }
 }
