--- a/js/data/locale/und/CA/address.json
+++ b/js/data/locale/und/CA/address.json
@@ -16,7 +16,12 @@
 			"line": "last",
 			"pattern": [
 				"new foundland",
-				"terre-neuve-et-labrador",
+				"newfoundland",
+				"new foundland and labrador",
+                "newfoundland and labrador",
+                "new foundland & labrador",
+                "newfoundland & labrador",
+                "terre-neuve-et-labrador",
 				"terre neuve et labrador",
 				"nfld",
 				"nl",
@@ -62,8 +67,12 @@
 				"nu",
 				"north west territories",
 				"northwest territories",
+                "north west territory",
+                "northwest territory",
 				"territoires du nord-ouest",
 				"territoires du nordouest",
+                "territoire du nord-ouest",
+                "territoire du nordouest",
 				"nwt",
 				"nt",
 				"yukon territory",
@@ -72,7 +81,22 @@
 				"yukon",
 				"yuk",
 				"yt"
-			]
+			],
+			"list": {
+                "NL": "Newfoundland and Labrador",
+                "NS": "Nova Scotia",
+                "NB": "New Brunswick",
+                "PE": "Prince Edward Island",
+                "QC": "Quebec",
+                "ON": "Ontario",
+                "MB": "Manitoba",
+                "SK": "Saskatchewan",
+                "AB": "Alberta",
+                "BC": "British Columbia",
+                "NU": "Nunavut",
+                "NT": "Northwest Territories",
+                "YT": "yukon territory"
+			}
 		},
 		{
 			"name": "locality",
@@ -80,5 +104,8 @@
 			"pattern": "[\\wÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-']+$",
 			"matchGroup": 0
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "Province or Territory"
+    }
 }
