--- a/js/data/locale/und/CI/address.json
+++ b/js/data/locale/und/CI/address.json
@@ -11,5 +11,8 @@
 			"line": "last",
 			"pattern": "(([A-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû]+)(\\s[0-9]{2})?)$"
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "District"
+    }
 }
