--- a/js/data/locale/und/CV/address.json
+++ b/js/data/locale/und/CV/address.json
@@ -9,25 +9,66 @@
             "name": "region",
             "line": "last",
             "pattern": [
-                "Boa Vista",
-                "Brava",
-                "Maio",
-                "Mosteiros",
-                "Paúl",
-                "Porto Novo",
-                "Praia",
-                "Ribeira Grande",
-                "Sal",
-                "Santa Catarina",
-                "Santa Cruz",
-                "São Domingos",
-                "São Filipe",
-                "São Miguel",
-                "São Nicolau",
-                "São Vicente",
-                "Tarrafal",
-                "Santiago"
-            ]
+                "boa vista",
+                "brava",
+                "maio",
+                "mosteiros",
+                "paul",
+                "porto vovo",
+                "praia",
+                "ribeira brava",
+                "ribeira grande",
+                "ribeira grande de santiago",
+                "santiago",
+                "ribeira",
+                "sal",
+                "santa catarina",
+                "santa catarina de fogo",
+                "santa cruz",
+                "são domingos",
+                "sao domingos",
+                "são filipe",
+                "sao filipe",
+                "são lourenço dos órgãos",
+                "sao lourenco dos orgaos",
+                "são lourenço",
+                "sao lourenco",
+                "são miguel",
+                "sao miguel",
+                "são salvador do mundo",
+                "sao salvador do mundo",
+                "são nicolau",
+                "sao nicolau",
+                "são vicente",
+                "sao vicente",
+                "tarrafal",
+                "tarrafal de são nicolau",
+                "tarrafal de sao nicolau"
+            ],
+            "list": {
+                "BV": "Boa Vista",
+                "BR": "Brava",
+                "MA": "Maio",
+                "MO": "Mosteiros",
+                "PA": "Paul",
+                "PN": "Porto Novo",
+                "PR": "Praia",
+                "RB": "Ribeira Brava",
+                "RG": "Ribeira Grande",
+                "RS": "Ribeira Grande de Santiago",
+                "SL": "Sal",
+                "CA": "Santa Catarina",
+                "CF": "Santa Catarina do Fogo",
+                "CR": "Santa Cruz",
+                "SD": "São Domingos",
+                "SF": "São Filipe",
+                "SO": "São Lourenço dos Órgãos",
+                "SM": "São Miguel",
+                "SS": "São Salvador do Mundo",
+                "SV": "São Vicente",
+                "TA": "Tarrafal",
+                "TS": "Tarrafal de São Nicolau"
+            }
         },
         {
             "name": "locality",
@@ -39,5 +80,8 @@
             "line": "last",
             "pattern": "([0-9]{4})"
         }
-    ]
+    ],
+    "fieldNames": {
+        "region": "Municipality"
+    }
 }
