--- a/js/data/locale/und/CZ/address.json
+++ b/js/data/locale/und/CZ/address.json
@@ -15,6 +15,9 @@
             "line": "startAtLast",
             "pattern": "[0-9]{3}\\s[0-9]{2}"
         }
-    ]
+    ],
+    "fieldNames": {
+        "region": "Region"
+    }
 }
 
