--- a/js/data/locale/und/EG/address.json
+++ b/js/data/locale/und/EG/address.json
@@ -10,54 +10,76 @@
 			"line":"last",
 			"pattern":"([0-9٠١٢٣٤٥٦٧٨٩۴۵۶]{5})$"
 		},
-		
-
 		{
 			"name":"region",
 			"line":"last",
 			"pattern":[
-		
 				"الاسكندرية",   
-"أسوان",
-"أسيوط",
-"البحيرة",
-"بني سويف",
-"القاهرة",
-"الدقهلية",
-"دمياط",
-"الفيوم",
-"الغربية",
-"الجيزة",
-"الإسماعيلية",
-"الكاف الشيخ",
-"مطروح",
-"المنيا",
-"المنوفية",
-"الوادي الجديد",
-"شمال سيناء",
-"بورسعيد",
-"القليوبية",
-"قنا",
-"البحر الأحمر",
-"الشرقية",
-"سوهاج",
-"جنوب سيناء",
-"السويس",
-"الأقصر",
-"حلوان"
-
-]
-		
-},
-		
-		
-
-			{
+                "أسوان",
+                "أسيوط",
+                "البحيرة",
+                "بني سويف",
+                "القاهرة",
+                "الدقهلية",
+                "دمياط",
+                "الفيوم",
+                "الغربية",
+                "الجيزة",
+                "الإسماعيلية",
+                "الكاف الشيخ",
+                "مطروح",
+                "المنيا",
+                "المنوفية",
+                "الوادي الجديد",
+                "شمال سيناء",
+                "بورسعيد",
+                "القليوبية",
+                "قنا",
+                "البحر الأحمر",
+                "الشرقية",
+                "سوهاج",
+                "جنوب سيناء",
+                "السويس",
+                "الأقصر",
+                "حلوان"
+            ],
+            "list": {
+                "DK": "Ad Daqahlīyah",
+                "BA": "Al Baḩr al Aḩmar",
+                "BH ": "Al Buḩayrah",
+                "FYM": "Al Fayyūm",
+                "GH": "Al Gharbīyah",
+                "ALX": "Al Iskandarīyah Alexandria",
+                "IS": "Al Ismāʿīlīyyah Ismailia",
+                "GZ": "Al Jīzah",
+                "MNF": "Al Minūfīyah",
+                "MN": "Al Minyā",
+                "C ": "Al Qāhirah",
+                "KB": "Al Qalyūbīyah",
+                "LX": "Al Uqşur",
+                "WAD": "Al Wādī al Jadīd",
+                "SHR": "Ash Sharqīyah",
+                "SUZ": "As Suways",
+                "ASN": "Aswān",
+                "AST": "Asyūţ",
+                "BNS": "Banī Suwayf Beni Suef",
+                "PTS": "Būr Sa‘īd",
+                "DT": "Dumyāţ",
+                "JS ": "Janūb Sīnā'",
+                "KFS": "Kafr ash Shaykh Kafr el-Sheikh",
+                "MT": "Maţrūḩ",
+                "KN": "Qinā",
+                "SIN": "Shamāl Sīnā'",
+                "SHG": "Sūhāj"
+            }
+        },
+		{
 			"name":"locality",
 			"line":"startAtLast",
 			"pattern":"([A-zـاـبــتــثــجــحــخــدـذـرـزـســشــصــضــطــظــعـغفقكـلــمــنــهـويـاـبـتـثـجـحـخـدـذـرـزـسـشـصـضـطـظـعغـفـقـكــلـمـنـهويـابـتـثـجـحـخـدذرحمدعرابىآل المهندسينزسـشـصـضـطـظـعـلـمـنـهـابتثجحخدذرزسشصضطظعلمنه\\.\\-\\s']+)$"
 		}
-
-		
-	]
+	],
+    "fieldNames": {
+        "region": "Governate"
+    }
 }
