--- a/js/data/locale/und/FR/address.json
+++ b/js/data/locale/und/FR/address.json
@@ -12,11 +12,21 @@
 			"pattern": "([A-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-' ]+)([Cc][Ee][Dd][Ee][Xx]\\s+[0-9]+)?$",
 			"matchGroup": 1
 		},
-		{
-			"name": "postalCode",
-			"line": "startAtLast",
-			"pattern": "([0-9]{5}(\\s+[Cc][Ee][Dd][Ee][Xx]\\s+[0-9]+)?)",
-			"matchGroup": 0
-		}
-	]
+        {
+            "name": "postalCode",
+            "line": "startAtLast",
+            "pattern": "[0-9]{5}",
+            "matchGroup": 0
+		},
+        {
+            "name": "postOffice",
+            "line": "startAtLast",
+            "pattern": "[Cc][Ee][Dd][Ee][Xx]\\s+[0-9]+",
+            "matchGroup": 0
+        }
+	],
+    "fieldNames": {
+        "region": "Region",
+        "postOffice": "CEDEX"
+    }
 }
