Fixed all AddressFmt.getFormatInfo() unit tests

--- a/js/data/locale/und/GB/address.json
+++ b/js/data/locale/und/GB/address.json
@@ -16,5 +16,9 @@
 			"line": "last",
 			"pattern": "[A-z\\.\\-']+$"
 		}
-	]
+	],
+    "fieldNames": {
+        "postalCode": "Post Code",
+        "locality": "Town"
+    }
 }
