--- a/js/data/locale/und/SG/address.json
+++ b/js/data/locale/und/SG/address.json
@@ -40,5 +40,9 @@
 				"matchGroup": 0
 			}
 		]
-	}
+	},
+    "fieldNames": {
+        "postalCode": "Post Code",
+        "locality": "Town"
+    }
 }
