MOJI-708: Make sure regions are sorted properly

--- a/js/data/locale/und/CN/address.json
+++ b/js/data/locale/und/CN/address.json
@@ -121,43 +121,7 @@
 					"macau",
 					"àomén",
 					"aomen"
-				],
-                "list": {
-                    "AH": "Anhui",
-                    "BJ": "Beijing",
-                    "CQ": "Chongqing",
-                    "FJ": "Fujian",
-                    "GD": "Guangdong",
-                    "GS": "Gansu",
-                    "GX": "Guangxi",
-                    "GZ": "Guizhou",
-                    "HA": "Henan",
-                    "HB": "Hubei",
-                    "HE": "Hebei",
-                    "HI": "Hainan",
-                    "HK": "Hong Kong",
-                    "HL": "Heilongjiang",
-                    "HN": "Hunan",
-                    "JL": "Jilin",
-                    "JS": "Jiangsu",
-                    "JX": "Jiangxi",
-                    "LN": "Liaoning",
-                    "MO": "Macau",
-                    "NM": "Inner Mongolia",
-                    "NX": "Ningxia Hui",
-                    "QH": "Qinghai",
-                    "SC": "Sichuan",
-                    "SD": "Shandong",
-                    "SH": "Shanghai", 
-                    "SN": "Shaanxī",
-                    "SX": "Shanxi",
-                    "TJ": "Tianjin",
-                    "TW": "Taiwan",
-                    "XJ": "Xinjiang",
-                    "XZ": "Tibet",
-                    "YN": "Yunnan",
-                    "ZJ": "Zhejiang"
-                }
+				]
 			},
 			{
 				"name": "locality",
@@ -244,43 +208,7 @@
 					"台湾省",
 					"台湾"
 				],
-				"matchGroup": 0,
-				"list": {
-                    "AH": "Anhui",
-                    "BJ": "Beijing",
-                    "CQ": "Chongqing",
-                    "FJ": "Fujian",
-                    "GD": "Guangdong",
-                    "GS": "Gansu",
-                    "GX": "Guangxi",
-                    "GZ": "Guizhou",
-                    "HA": "Henan",
-                    "HB": "Hubei",
-                    "HE": "Hebei",
-                    "HI": "Hainan",
-                    "HK": "Hong Kong",
-                    "HL": "Heilongjiang",
-                    "HN": "Hunan",
-                    "JL": "Jilin",
-                    "JS": "Jiangsu",
-                    "JX": "Jiangxi",
-                    "LN": "Liaoning",
-                    "MO": "Macau",
-                    "NM": "Inner Mongolia",
-                    "NX": "Ningxia Hui",
-                    "QH": "Qinghai",
-                    "SC": "Sichuan",
-                    "SD": "Shandong",
-                    "SH": "Shanghai", 
-                    "SN": "Shaanxī",
-                    "SX": "Shanxi",
-                    "TJ": "Tianjin",
-                    "TW": "Taiwan",
-                    "XJ": "Xinjiang",
-                    "XZ": "Tibet",
-                    "YN": "Yunnan",
-                    "ZJ": "Zhejiang"
-                }
+				"matchGroup": 0
 			},
 			{
 				"name": "locality",
