Added in translations of the address form labels

--- a/js/data/locale/zh/addressres.json
+++ b/js/data/locale/zh/addressres.json
@@ -1,12 +1,61 @@
 {
+    "Area": "区域",
+    "Autonomous Community": "自治区",
+    "Band": "邦",
+    "Borough": "自治镇",
+    "Burgh": "自治市",
+    "CEDEX": "割让的领土",
+    "Canton": "州",
     "City": "城市",
-    "Country": "国家",
+    "Constituency": "选区",
+    "Country": "国家/地区",
+    "County": "县",
+    "Department": "部门",
+    "District": "区",
+    "Division": "分区",
+    "Dominium": "领地",
+    "Duchy": "公国",
+    "Emirate": "酋长国",
+    "Entity": "实体",
+    "Hundred": "百人区",
+    "Indian Reservation": "印第安人保留地",
+    "Indian Reserve": "印第安人居留地",
+    "Kingdom": "王国",
+    "Local Council": "当地政府",
+    "Municipality": "自治市/区",
+    "Oblast": "自治州",
+    "Parish": "教区",
     "Post Code": "邮政编码",
+    "Post Office": "邮局",
     "Postal Code": "邮政编码",
+    "Prefecture": "府",
+    "Principality": "侯国",
+    "Province": "省",
     "Province or Region": "省或地区",
+    "Province or Territory": "省或地区",
+    "Public Body": "公共机构",
+    "Rancheria": "印第安人村落",
+    "Region": "地区",
+    "Regional": "地区",
+    "Regional County": "县区",
+    "Republic": "共和国",
+    "Riding": "区",
+    "Rural": "乡村",
+    "Shire": "郡",
+    "Special Administrative Region": "特别行政区",
+    "State": "省/市/自治区",
     "Street Address": "地址",
-    "Town": "城市",
+    "Territory": "领地",
+    "Town": "镇",
+    "Township": "乡",
+    "Tribe": "部落",
+    "Village": "村庄",
+    "Voivodeship": "省",
     "Zip Code": "邮政编码",
     "country": "国家",
-    "locality": "城市"
+    "locality": "城市",
+    "postOffice": "邮局",
+    "postalCode": "邮政编码",
+    "region": "省/市/自治区",
+    "streetAddress": "地址"
 }
