--- a/js/data/locale/de/addressres.json
+++ b/js/data/locale/de/addressres.json
@@ -1,18 +1,19 @@
 {
     "Area": "Bereich",
     "Autonomous Community": "Autonome Gemeinschaft",
+    "Band": "Stamm",
     "Borough": "Bezirk",
     "Burgh": "Burg",
     "Canton": "Kanton",
     "City": "Stadt",
-    "Constituency": "Wahlkreis",
+    "Constituency": "Wahlbezirk",
     "Country": "Land",
     "County": "Grafschaft",
     "Department": "Abteilung",
     "District": "Bezirk",
     "Division": "Abteilung",
     "Duchy": "Herzogtum",
-    "Emirate": "Entität",
+    "Emirate": "Emirat",
     "Entity": "Entität",
     "Hundred": "Hundert",
     "Indian Reservation": "Indianerreservat",
@@ -30,11 +31,13 @@
     "Province or Region": "Provinz oder Region",
     "Province or Territory": "Provinz oder Gebiet",
     "Public Body": "Öffentlicher Körper",
+    "Rancheria": "Siedlung",
     "Regional": "Regionaler",
     "Regional County": "Regionaler Bezirk",
     "Republic": "Republik",
     "Riding": "Reiten",
     "Rural": "Ländliches Gebiet",
+    "Shire": "Grafschaft",
     "Special Administrative Region": "Sonderverwaltungsregion",
     "State": "Bundesland",
     "Street Address": "Straßenadresse",
