All unit tests pass now

--- a/js/data/locale/zh/addressres.json
+++ b/js/data/locale/zh/addressres.json
@@ -4,7 +4,7 @@
     "Band": "邦",
     "Borough": "自治镇",
     "Burgh": "自治市",
-    "CEDEX": "割让的领土",
+    "CEDEX": "邮局",
     "Canton": "州",
     "City": "城市",
     "Constituency": "选区",
@@ -19,10 +19,10 @@
     "Entity": "实体",
     "Hundred": "百人区",
     "Indian Reservation": "印第安人保留地",
-    "Indian Reserve": "印第安人居留地",
+    "Indian Reserve": "印第安人保留地",
     "Kingdom": "王国",
     "Local Council": "当地政府",
-    "Municipality": "自治市/区",
+    "Municipality": "自治市",
     "Oblast": "自治州",
     "Parish": "教区",
     "Post Code": "邮政编码",
@@ -43,7 +43,7 @@
     "Rural": "乡村",
     "Shire": "郡",
     "Special Administrative Region": "特别行政区",
-    "State": "省/市/自治区",
+    "State": "省",
     "Street Address": "地址",
     "Territory": "领地",
     "Town": "镇",
@@ -56,6 +56,6 @@
     "locality": "城市",
     "postOffice": "邮局",
     "postalCode": "邮政编码",
-    "region": "省/市/自治区",
+    "region": "省",
     "streetAddress": "地址"
 }
