Update to IANA 2018e

--- a/js/data/locale/zoneinfo/Africa/Windhoek.json
+++ b/js/data/locale/zoneinfo/Africa/Windhoek.json
@@ -1,5 +1,11 @@
 {
-    "f": "CAT",
+    "e": {
+        "c": "WAT",
+        "m": 4,
+        "r": "0>1",
+        "t": "2:0"
+    },
+    "f": "{c}",
     "o": "2:0",
     "c": "NA",
     "n": "Namibia {c} Time"
