Update names of the top-level administrative regions for many countries in the world

--- a/js/data/locale/und/AU/address.json
+++ b/js/data/locale/und/AU/address.json
@@ -70,6 +70,6 @@
 	],
     "fieldNames": {
         "postalCode": "Post Code",
-        "region": "State"
+        "region": "State or Territory"
     }
 }
