--- a/js/data/locale/und/CG/address.json
+++ b/js/data/locale/und/CG/address.json
@@ -11,5 +11,8 @@
 			"line": "startAtLast",
 			"pattern": "([A-zÀÁÈÉÌÍÑÒÓÙÚÜàáèéìíñòóùúü\\.\\-']+)$"
 		}
-	]
+	],
+	"fieldNames": {
+        "region": "Department"
+    }
 }
