--- a/js/data/locale/und/ES/address.json
+++ b/js/data/locale/und/ES/address.json
@@ -158,5 +158,8 @@
 			"line": "startAtLast",
 			"pattern": "[0-9]{5}\\s*-?"
 		}
-	]	
+	],
+    "fieldNames": {
+        "region": "Autonomous Community"
+    }
 }
