--- a/js/data/locale/und/ET/address.json
+++ b/js/data/locale/und/ET/address.json
@@ -12,5 +12,8 @@
             "pattern": "(([A-z]+)? ?[A-z]+)$",
             "matchGroup": 1
         }
-    ]
+    ],
+    "fieldNames": {
+        "region": "State"
+    }
 }
