--- a/js/data/locale/und/GW/address.json
+++ b/js/data/locale/und/GW/address.json
@@ -3,22 +3,25 @@
 		"default": "{streetAddress} {region}\n{country}",
 		"nocountry": "{streetAddress} {region}"
 	},
-	
 	"startAt": "end",
 	"fields": [
 		{
 			"name": "region",
 			"line": "last",
 			"pattern": [
-				"Conakry",
-				"Basse-Guinée",
-				"Moyenne-Guinée",
-				"Haute-Guinée",
-				"Guinée forestière"
+				"Bafatá",
+				"Biombo",
+				"Bissau",
+				"Bolama",
+				"Cacheu",
+				"Gabu",
+				"Oio",
+				"Quinara",
+				"Tombali"
 			]
 		}
 	],
-    "fieldNames": {
-        "region": "Prefecture"
-    }
+	"fieldNames": {
+		"region": "Region"
+	}
 }
