--- a/js/data/locale/und/HR/address.json
+++ b/js/data/locale/und/HR/address.json
@@ -16,5 +16,8 @@
             "pattern": "((HR-)?[0-9]{5})"
         }
 	 
-    ]
+    ],
+    "fieldNames": {
+        "region": "County"
+    }
 }
