--- a/js/data/locale/und/IE/address.json
+++ b/js/data/locale/und/IE/address.json
@@ -22,5 +22,8 @@
 			"line": "last",
 			"pattern": "[A-zÁÉÍÓÚáéíóú\\.\\-']+$"
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "County"
+    }
 }
