--- a/js/data/locale/und/IL/address.json
+++ b/js/data/locale/und/IL/address.json
@@ -16,5 +16,8 @@
             "pattern": "[ABCDEFGHIJKLMNOPQRSTUVXYZa-zבּבגדהוזחטיכּכךלמםנןסעפּפףצץקרשׁשׂתּת\\s-.\"]+"
         }
         
-    ]
+    ],
+    "fieldNames": {
+        "region": "District"
+    }
 }
