--- a/js/data/locale/und/KG/address.json
+++ b/js/data/locale/und/KG/address.json
@@ -18,5 +18,8 @@
 			"pattern": "[АаБбВвГгҐґДдЕеЄєЖжЗзИиІіЇїњЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЬьЮюЯя\\.\\-\\S']+"
 		}	
 		
-	]	
+	],
+    "fieldNames": {
+        "region": "Oblast"
+    }
 }
