--- a/js/data/locale/und/MX/address.json
+++ b/js/data/locale/und/MX/address.json
@@ -103,5 +103,8 @@
 			"pattern": "(([Cc]\\.?[Pp]\\.?\\s+)?[0-9]{5})",
 			"matchGroup": 0
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "State"
+    }
 }
