--- a/js/data/locale/und/NO/address.json
+++ b/js/data/locale/und/NO/address.json
@@ -16,5 +16,8 @@
             "pattern": "[AÁBDÐEÉFGHIÍJKLMNOÓPRSTUÚVXYÝÞÆÖaábdðeéfghiíjklmnoóprstuúvxyýþæö0-9\\.\\-']+"
         }
         
-    ]
+    ],
+    "fieldNames": {
+        "region": "Region"
+    }
 }
