--- a/js/data/locale/und/PT/address.json
+++ b/js/data/locale/und/PT/address.json
@@ -17,5 +17,8 @@
             "line": "startAtLast",
             "pattern": "([0-9]{4}-[0-9]{3})"
         }
-    ]
+    ],
+    "fieldNames": {
+        "region": "District"
+    }
 }
