--- a/js/data/locale/und/TH/address.json
+++ b/js/data/locale/und/TH/address.json
@@ -201,5 +201,8 @@
             "pattern": "(([A-Za-z-กขฃคฅฆงจฉชซฌญฎฏฐฑฒณดตถทธนบปผฝพฟภมยรลวศษสหฬอฮ ะ◌ั◌็ า◌ิ◌̍◌̎◌ํ◌ุ◌ูเ โ ใ ไ อยวฤฤๅฦฦๅ])? ?[A-Za-z-กขฃคฅฆงจฉชซฌญฎฏฐฑฒณดตถทธนบปผฝพฟภมยรลวศษสหฬอฮ ะ◌ั◌็ า◌ิ◌̍◌̎◌ํ◌ุ◌ูเ โ ใ ไ อยวฤฤๅฦฦๅอำเภอเมื]+)$",
             "matchGroup": 1
         }
-    ]
+    ],
+    "fieldNames": {
+        "region": "District"
+    }
 }
