--- a/js/data/locale/und/AD/address.json
+++ b/js/data/locale/und/AD/address.json
@@ -3,20 +3,23 @@
         "default": "{streetAddress}\n{postalCode} {locality}\n{country}",
         "nocountry": "{streetAddress}\n{postalCode} {locality}"
     },
+    
     "startAt": "end",
     "fields": [
         {
             "name": "locality",
-            "line": "startAtLast",
-            "pattern": "[ABCDEFGHIJKLMNOPQRSTUVXYZÅÄÖ\\s.'\"]+"
+            "line": "last",
+            "pattern": "([A-zÀÁÂÄÇÈÉÊËÌÍÎÏÒÓÔÙÚÛàáâçèéêëìíîïòóôùúû\\.\\-' ]+)([Cc][Ee][Dd][Ee][Xx]\\s+[0-9]+)?$",
+            "matchGroup": 1
         },
         {
             "name": "postalCode",
-            "line": "last",
-            "pattern": "(FI-)?[0-9]{5}"
+            "line": "startAtLast",
+            "pattern": "[0-9]{5}",
+            "matchGroup": 0
         }
     ],
     "fieldNames": {
-        "region": "County"
+        "region": "Parish"
     }
 }
