--- a/js/data/locale/und/GR/address.json
+++ b/js/data/locale/und/GR/address.json
@@ -15,5 +15,8 @@
             "line": "last",
             "pattern": "^[0-9]{3} [0-9]{2}$"
         }
-    ]
+    ],
+    "fieldNames": {
+        "region": "Region"
+    }
 }
