--- a/js/data/locale/und/GT/address.json
+++ b/js/data/locale/und/GT/address.json
@@ -18,5 +18,8 @@
 			"line": "startAtLast",
 			"pattern": "[0-9]{5}\\s*-?"
 		}
-	]	
+	],
+    "fieldNames": {
+        "region": "Department"
+    }
 }
