--- a/js/data/locale/und/HU/address.json
+++ b/js/data/locale/und/HU/address.json
@@ -16,5 +16,8 @@
             "pattern": "[AÁÄBCCSDǱǲEÉFGYHIÍJKLMNOÓÖŐPQRSSZTYUÚÜÛVWXYZaábccsdǳeéfghiíjklmnoóöőpqrstuúüûvwxyz\\.\\-']+"
         }
         
-    ]
+    ],
+    "fieldNames": {
+        "region": "County"
+    }
 }
