--- a/js/data/locale/und/JP/address.json
+++ b/js/data/locale/und/JP/address.json
@@ -93,17 +93,19 @@
 			},
 			{
 				"name": "region",
-				"line": "startAtFirst",				
+				"line": "startAtFirst",
 				"pattern":"\\S*(県|道|府|都)+",
 				"matchGroup": 0
 			},
 			{
 				"name": "locality",
 				"line": "startAtFirst",
-				"pattern":"\\S*(市|区)+",				
+				"pattern":"\\S*(市|区)+",
 				"matchGroup": 0
 			}
 		]
-	}
-	
+	},
+    "fieldNames": {
+        "region": "Prefecture"
+    }
 }
