--- a/js/data/locale/und/PL/address.json
+++ b/js/data/locale/und/PL/address.json
@@ -17,5 +17,8 @@
 			"line": "last",
 			"pattern": "([0-9]{2}-[0-9]{3})"
 		}
-	]
+	],
+    "fieldNames": {
+        "region": "Voivodship"
+    }
 }
