--- a/js/data/locale/und/RU/address.json
+++ b/js/data/locale/und/RU/address.json
@@ -110,15 +110,14 @@
 					"Ингушетия",
 					"Республика Алтай"
                             ] 
-		
                 },
 		{
 			"name":"locality",
 			"line":"startAtLast",
 			"pattern":"([A-zАаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя]+( [A-zАаБбВвГгДдЕеЁёЖжЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЪъЫыЬьЭэЮюЯя\\-]+)?)$"
 		}
-		
-
-		
-	]
+	],
+    "fieldNames": {
+        "region": "Oblast"
+    }
 }
