--- a/js/data/locale/und/TW/area.json
+++ b/js/data/locale/und/TW/area.json
@@ -1,107 +1,41 @@
 {
     "2": {
-        "sn": "Panchiao, Sanchung, Taipei, Yingge, Yungho, Jilong"
+        "sn": "Taipei City, New Taipei City, Keelung City"
     },
     "3": {
-        "sn": "Tachi, Taoyuan"
+        "sn": "Taoyuan City, Hsinchu County, Hualien County, Yilan County"
     },
     "4": {
-        "sn": "Wuri, Wufeng, Shalong, Zhanghua, Yuanlin"
+        "sn": "Taichung City, Changhua County"
     },
     "5": {
-        "sn": "Dalin, Jiayi, Minxiong, Beigang"
+        "sn": "Chiayi City, Chiayi County, Yunlin County"
     },
     "6": {
-        "sn": "Makung, Shanhua"
+        "sn": "Tainan City, Penghu County"
     },
     "7": {
-        "sn": "Fengshan, Gangshan, Kaohsiung, Jiuqutang, Nanzi, Qishan, Zuoying"
+        "sn": "Kaohsiung City"
     },
     "8": {
-        "sn": "Chaozhou, Pingdong, Mazu"
-    },
-    "32": {
-        "sn": "Ruifang"
-    },
-    "33": {
-        "sn": "Daxi"
-    },
-    "34": {
-        "sn": "Chungli"
-    },
-    "35": {
-        "sn": "Xinzhu, Zhubei"
-    },
-    "36": {
-        "sn": "Hukou, Zhudong"
+        "sn": "Pingtung County"
     },
     "37": {
-        "sn": "Zhunan, Miaoli"
-    },
-    "38": {
-        "sn": "Hualian"
-    },
-    "39": {
-        "sn": "Jiaoqi, Su'ao, Yilan, Luodong"
-    },
-    "42": {
-        "sn": "Taichung"
-    },
-    "43": {
-        "sn": "Taichung"
-    },
-    "44": {
-        "sn": "Taichung"
-    },
-    "45": {
-        "sn": "Fengyuan, Houli"
-    },
-    "46": {
-        "sn": "Dadu, Dajia, Shalu, Qingshui, Rinan, Wuchi"
-    },
-    "47": {
-        "sn": "Lugang"
-    },
-    "48": {
-        "sn": "Shetou, Tianzhong, Yongjing"
+        "sn": "Miaoli County"
     },
     "49": {
-        "sn": "Buli, Nantou, Riyuetan, Xincun, Zhongxing"
+        "sn": "Nantou County"
     },
-    "55": {
-        "sn": "Touliu"
-    },
-    "56": {
-        "sn": "Huwei"
-    },
-    "62": {
-        "sn": "Tainan"
-    },
-    "66": {
-        "sn": "Xinying"
-    },
-    "67": {
-        "sn": "Chiali"
-    },
-    "69": {
-        "sn": "Penghu"
-    },
-    "88": {
-        "sn": "Donggang"
+    "82": {
+        "sn": "Kinmen County"
     },
     "89": {
-        "sn": "Taidong"
-    },
-    "458": {
-        "sn": "Lishan"
-    },
-    "823": {
-        "sn": "Jinmen"
+        "sn": "Taitung County"
     },
     "826": {
-        "sn": "Wu-chiu"
+        "sn": "Wuqiu Township"
     },
-    "827": {
-        "sn": "Tung-Sha Island"
+    "836": {
+        "sn": "Lienchiang County"
     }
 }
