--- a/js/data/locale/und/TW/phonefmt.json
+++ b/js/data/locale/und/TW/phonefmt.json
@@ -11,7 +11,7 @@
 		"extension":        [" X", " XX", " XXX", " XXXX", " XXXXX", " XXXXXX", " XXXXXXX"]
 	},
 	"mobile": {
-		"iddPrefix":        ["X", "XX", "XXX-"],
+		"iddPrefix":        ["X", "XX", "XXX"],
 		"countryCode":      ["X ", "XX ", "XXX "],
 		"cic":              ["X", "XX", "XXX", "XXXX ", "XXXXX "],
 		"emergency":        ["X", "XX", "XXX ", "XXXX ", "XXXXX "],
@@ -34,7 +34,7 @@
 	"default": {
 		"example":           "(03) 360-6537 ",
 		"partial": {
-			"iddPrefix":        ["X", "XX-", "XXX-"],
+			"iddPrefix":        ["X", "XX-", "XXX"],
 			"countryCode":      ["X ", "XX ", "XXX "],
 			"cic":              ["X", "XX-", "XXX-", "XXXX-"],
 			"emergency":        ["X", "XX", "XXX "],
@@ -46,7 +46,7 @@
 			"extension":        ["-X", "-XX", "-XXX", "-XXXX", "-XXXXX"]
 		},
 		"whole": {
-			"iddPrefix":        ["X", "XX-", "XXX-"],
+			"iddPrefix":        ["X", "XX-", "XXX"],
 			"countryCode":      ["X ", "XX ", "XXX "],
 			"cic":              ["X", "XX-", "XXX-", "XXXX-"],
 			"emergency":        ["X", "XX", "XXX "],
@@ -59,7 +59,7 @@
 		}
 	},
 	"括號": {
-		"example":          "039 606 537 ",
+		"example":          "03 360 6537 ",
 		"iddPrefix":        ["X", "XX ", "XXX "],
 		"countryCode":      ["X ", "XX ", "XXX "],
 		"emergency":        ["X", "XX", "XXX "],
@@ -72,7 +72,7 @@
 		"extension":        ["-X", "-XX", "-XXX", "-XXXX", "-XXXXX"]
 	},
 	"破折號": {
-		"example":          "039-606-537 ",
+		"example":          "03-360-6537 ",
 		"iddPrefix":        ["X", "XX ", "XXX "],
 		"countryCode":      ["X ", "XX ", "XXX "],
 		"emergency":        ["X", "XX", "XXX "],
@@ -85,7 +85,7 @@
 		"extension":        ["-X", "-XX", "-XXX", "-XXXX", "-XXXXX"]
 	},
 	"沒有空格": {
-		"example":          "(039) 606537 ",
+		"example":          "(03) 3606537 ",
 		"iddPrefix":        ["X", "XX ", "XXX "],
 		"countryCode":      ["X ", "XX ", "XXX "],
 		"emergency":        ["X", "XX", "XXX "],
